tmdb job yapıldı, error handler fixlendi
